--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+<md-toolbar color="primary">
+  <span>License Manager</span>
+  <span class="example-spacer"></span>
+  <md-icon class="example-icon">verified_user</md-icon>
+  <md-icon class="example-icon">person outline</md-icon>
+</md-toolbar>
+
+<app-license-search></app-license-search>
