--- a/src/app/components/license-search/license-search.component.html
+++ b/src/app/components/license-search/license-search.component.html
@@ -9,10 +9,10 @@
         <div fxLayout="row">
           <div fxFlex fxLayoutAlign="space-around">
             <md-input-container>
-              <input mdInput placeholder="Sales Order No" [mdAutocomplete]="auto" [formControl]="salesOrderCtrl">
+              <input mdInput placeholder="Sales Order No" [mdAutocomplete]="auto1" [formControl]="salesOrderCtrl">
             </md-input-container>
 
-            <md-autocomplete #auto="mdAutocomplete">
+            <md-autocomplete #auto1="mdAutocomplete">
               <md-option *ngFor="let salesOrder of filteredSalesOrders | async" [value]="salesOrder">
                 {{ salesOrder }}
               </md-option>
@@ -20,10 +20,10 @@
           </div>
           <div fxFlex fxLayoutAlign="space-around">
             <md-input-container>
-              <input mdInput placeholder="Sell To Customer No" [mdAutocomplete]="auto" [formControl]="sellToCusCtrl">
+              <input mdInput placeholder="Sell To Customer No" [mdAutocomplete]="auto2" [formControl]="sellToCusCtrl">
             </md-input-container>
 
-            <md-autocomplete #auto="mdAutocomplete">
+            <md-autocomplete #auto2="mdAutocomplete">
               <md-option *ngFor="let sellToCusNo of filteredSellToCusNumbers | async" [value]="sellToCusNo">
                 {{ sellToCusNo }}
               </md-option>
@@ -33,28 +33,28 @@
         <div fxLayout="row">
           <div fxFlex fxLayoutAlign="space-around">
             <md-input-container>
-              <input mdInput placeholder="Ship To Customer No" [mdAutocomplete]="auto" [formControl]="shipToCusCtrl">
+              <input mdInput placeholder="Ship To Customer No" [mdAutocomplete]="auto3" [formControl]="shipToCusCtrl">
             </md-input-container>
 
-            <md-autocomplete #auto="mdAutocomplete">
+            <md-autocomplete #auto3="mdAutocomplete">
               <md-option *ngFor="let shipToCusNo of filteredShipToCusNumbers | async" [value]="shipToCusNo">
                 {{ shipToCusNo }}
               </md-option>
             </md-autocomplete>
           </div>
-          <div fxFlex></div>
+          <div fxFlex>
+            <button md-raised-button color="primary" (click)="search()">Search</button>
+          </div>
         </div>
       </div>
     </div>
   </md-card-content>
 </md-card>
 
-<md-card>
+<md-card *ngFor="let result of searchResult" class="search-result-card">
   <md-card-content>
-    <ul>
-      <li *ngFor="let item of license">
-        <div>{{item?.sellToCusName}}</div>
-      </li>
-    </ul>
+    <div>{{result.salesOrderNo}}</div>
+    <div>{{result.sellToCusName}}</div>
+    <div>{{result.shipToCusName}}</div>
   </md-card-content>
 </md-card>
