--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
+
+.label-text {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  color: #90a4ae;
+  font-weight: 400;
+}
+
+.primary-text {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  color: #607d8b;
+  font-weight: 500;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 75%;
+}
+
+.warn-text {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  color: #b37128;
+  font-weight: 600;
+  white-space: nowrap;
+}
