--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <md-toolbar color="primary">
-  <span>License Manager</span>
+  <span (click)="onClick()" class="hover-click">License Manager</span>
   <!--<span class="example-spacer"></span>-->
-  <md-icon class="example-icon">verified_user</md-icon>
-  <md-icon class="example-icon">person outline</md-icon>
+  <!--<md-icon class="example-icon">verified_user</md-icon>-->
+  <!--<md-icon class="example-icon">person outline</md-icon>-->
 </md-toolbar>
 
 <div>
